--- a/views/stock.html
+++ b/views/stock.html
@@ -62,7 +62,7 @@
                             <a class="nav-link text-white" href="../index.html">Inicio</a>
                             <a class="nav-link text-white" href="#">Stock DELTHA CAR´S</a>
                             <a class="nav-link text-white" href="./financiacion.html">Financiación</a>
-                            <a class="nav-link text-white" href="./about.html">Contacto</a>
+                            <a class="nav-link text-white" href="./contact.html">Contacto</a>
                         </div>
                     </div>
                 </div>
