agregar estructura usando nodejs, ejs y express

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
-  <link rel="icon" href="logoDeltha.ico">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" media="screen and (max-width:768px)" href="../css/mobile.css">
+  <link rel="icon" href="../logoDeltha.ico">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -145,7 +145,7 @@
         </div>
       </div>
     </div>
-    <div class="et_pb_bottom_inside_divider" style=""></div>
+    <div class="et_pb_bottom_inside_divider"></div>
   </div>
 
   <!-- Seccion ofertas de la empresa 2 -->
@@ -249,7 +249,7 @@
         </div>
       </div>
     </div>
-    <div class="et_pb_bottom_inside_divider" style=""></div>
+    <div class="et_pb_bottom_inside_divider" ></div>
   </div>
 
 
@@ -311,8 +311,8 @@
             </div>
           </div>
           <div class="et_pb_button_module_wrapper et_pb_button_2_wrapper et_pb_button_alignment_center et_pb_module ">
-            <a class="et_pb_button bg-danger car-button et_pb_button_2 et_pb_bg_layout_light" style="color: white ;
-              href=" https://deltacars.es/project/honda-civic-1-6-elegance/" data-icon="→">Ver ficha</a>
+            <a class="et_pb_button bg-danger car-button et_pb_button_2 et_pb_bg_layout_light" style="color: white ;"
+              href="https://deltacars.es/project/honda-civic-1-6-elegance/" data-icon="→">Ver ficha</a>
           </div>
         </div>
         <div
@@ -336,7 +336,7 @@
             </div>
           </div>
           <div class="et_pb_button_module_wrapper et_pb_button_3_wrapper et_pb_button_alignment_center et_pb_module ">
-            <a class="et_pb_button bg-danger car-button et_pb_button_3 et_pb_bg_layout_light" style="color: white ;
+            <a class="et_pb_button bg-danger car-button et_pb_button_3 et_pb_bg_layout_light" style="color: white ;"
               href=" https://deltacars.es/project/citroen-berlingo-multispace/" data-icon="→">Ver ficha</a>
           </div>
         </div>
@@ -354,8 +354,7 @@
       <div
         class="et_pb_column et_pb_column_4_4 et_pb_column_18 et_pb_css_mix_blend_mode_passthrough et-last-child text-center">
 
-        <div class="et_pb_module et_pb_text et_pb_text_5 et_pb_text_align_center et_pb_bg_layout_light et_had_animation"
-          style="">
+        <div class="et_pb_module et_pb_text et_pb_text_5 et_pb_text_align_center et_pb_bg_layout_light et_had_animation">
 
           <div class="et_pb_text_inner">
             <h2>financiación</h2>
