--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" media="screen and (max-width:768px)" href="../css/mobile.css">
-  <link rel="icon" href="../logoDeltha.ico">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" media="screen and (max-width:768px)" href="/css/mobile.css">
+  <link rel="icon" href="/img/logoDeltha.ico">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -14,8 +14,8 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
   <!-- Link CSS JS -->
-  <link rel="stylesheet" href="css/generalStyles.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="/css/generalStyles.css">
+  <link rel="stylesheet" href="/css/index.css">
   <title>Deltha Car´s</title>
 
   <!-- Google Fonts -->
@@ -30,45 +30,9 @@
 
 <body>
 
-  <!-- Barra de navegación -->
-  <section>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-dark fixed-top">
-        <div class="container-fluid">
-          <div class="container-logo">
-            <a class="navbar-brand" href="#">
-              <img class="nav-logo" src="img/logoD.png">
-              <span class="header-span-deltha">DELTHA</span>
-              <span class="header-span-car">CAR´S</span></span>
-            </a>
-          </div>
-          <button class="navbar-toggler drop-down-button" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon">
-              <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white"
-                class="bi bi-chevron-double-down" viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                  d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
-                <path fill-rule="evenodd"
-                  d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
-              </svg>
-            </span>
-          </button>
-          <div class="flex-row-reverse container-fluid collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto">
-              <a class="link-pages nav-link" href="#">Inicio</a>
-              <a class="link-pages nav-link" href="views/stock.html">Stock DELTHA CAR´S</a>
-              <a class="link-pages nav-link" href="views/financiacion.html">Financiación</a>
-              <a class="link-pages nav-link" href="views/about.html">Contacto</a>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </header>
-  </section>
 
-  <!-- Seccion Hero -->
+  <%- include('./shared/nav.ejs') %>
+
   <section class="seccion-hero text-center">
     <div class="fixed-background">
       <div>
@@ -91,7 +55,6 @@
     </div>
   </section>
 
-  <!-- Seccion ofertas empresa -->
   <div
     class="et_pb_section et_pb_section_1 et_pb_with_background et_section_regular section_has_divider et_pb_bottom_divider">
     <div class="et_pb_row et_pb_row_2 et_pb_row_fullwidth">
@@ -148,7 +111,7 @@
     <div class="et_pb_bottom_inside_divider"></div>
   </div>
 
-  <!-- Seccion ofertas de la empresa 2 -->
+
   <div
     class="et_pb_section et_pb_section_2 et_pb_with_background et_section_regular section_has_divider et_pb_bottom_divider">
     <div class="et_pb_row et_pb_row_3">
@@ -367,7 +330,7 @@
       <div class="et_pb_column et_pb_column_4_4 et_pb_column_19 et_pb_css_mix_blend_mode_passthrough et-last-child">
 
         <div class="et_pb_button_module_wrapper et_pb_button_5_wrapper et_pb_button_alignment_center et_pb_module">
-          <a class="et_pb_button et_pb_button_5 et_pb_bg_layout_dark" href="views/financiacion.html"
+          <a class="et_pb_button et_pb_button_5 et_pb_bg_layout_dark" href="/financiacion"
             data-icon="$">Ver financiación</a>
         </div>
       </div>
@@ -400,7 +363,7 @@
         <div>
           <div class="container.img d-flex justify-content-center align-items-center">
             <div class="img-holder">
-              <img src="./img/oip.png" alt="Nuestra Equipo" class="visible">
+              <img src="/img/oip.png" alt="Nuestra Equipo" class="visible">
             </div>
           </div>
         </div>
