--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -4,71 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
-    <link rel="icon" href="logoDeltha.ico">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" media="screen and (max-width:768px)" href="/css/mobile.css">
+    <link rel="icon" href="/img/logoDeltha.ico">
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <!-- Popper.js (si es necesario) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.4/umd/popper.min.js"></script>
-
-    <title>Deltha Car´s</title>
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"></script>
     <!-- Link CSS JS -->
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/index.css">
-</head>
+    <link rel="stylesheet" href="/css/generalStyles.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <title>Deltha Car´s</title>
+  
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
+  
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  </head>
 
 <body>
-    <section class="stock cars">
-        <div class="container">
-            
-        </div>
-    </section>
 
 
     <!-- Nav -->
-    <section>
-        <header>
-            <nav class="row navbar navbar-expand-lg bg-dark">
-                <div class="container-fluid">
-                    <div class="container-icon" style="margin-left: 20px;">
-                        <a class="navbar-brand" href="#">
-                            <img src="../img/logoD.png" alt="Bootstrap" width="70" height="70"> <span
-                                class="text-white">DELTHA<span class="text-danger">CAR´S</span></span>
-                        </a>
-                    </div>
-                    <button class="navbar-toggler " style="margin-right: 10px; border-color: white;" type="button"
-                        data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white"
-                                class="bi bi-chevron-double-down" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
-                                <path fill-rule="evenodd"
-                                    d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
-                            </svg>
-                        </span>
-                    </button>
-                    <div class="flex-row-reverse container-fluid collapse navbar-collapse" style="margin-left: 20px;"
-                        id="navbarNavAltMarkup">
-                        <div class="navbar-nav ml-auto">
-                            <a class="nav-link text-white" href="../index.html">Inicio</a>
-                            <a class="nav-link text-white" href="#">Stock DELTHA CAR´S</a>
-                            <a class="nav-link text-white" href="./financiacion.html">Financiación</a>
-                            <a class="nav-link text-white" href="./contact.html">Contacto</a>
-                        </div>
-                    </div>
-                </div>
-            </nav>
-        </header>
-    </section>
+    <%- include('./shared/nav.ejs') %>
 
     <!-- Automoviles -->
     <div>
