--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -29,8 +29,8 @@ h1 {
   font-family: "Teko", Helvetica, Arial, Lucida, sans-serif;
   font-weight: 500;
   text-transform: uppercase;
-  font-size: 6.5rem;
-  color: #ffffff !important;
+  font-size: 8.5rem;
+  color: #000000 !important;
   letter-spacing: 0.05em;
   line-height: 0.9em;
   text-shadow: 0em 0.18em 0.27em rgba(0, 0, 0, 0.24);
@@ -50,7 +50,6 @@ h1 {
 }
 
 .left-column {
-  margin-top: -90px;
   background-image: linear-gradient(
     190deg,
     #c10f1b 85%,
@@ -58,6 +57,7 @@ h1 {
   );
   height: 750px;
   width: 487px;
+  margin-top: -30px;
 }
 .subtitle-info {
   font-family: "Teko", Helvetica, Arial, Lucida, sans-serif;
@@ -78,7 +78,7 @@ h1 {
 }
 
 .center-left-column {
-  margin-top:50px;
+  margin-top:90px;
   margin-left: 50px;
 }
 
@@ -129,4 +129,9 @@ h1 {
 
 .policy-txt{
     color: gray;
+}
+
+#map{
+  height: 650px;
+  width: 100%;
 }
