--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
-  <link rel="icon" href="logoDeltha.ico">
+  <link rel="icon" href="/img/logoDeltha.ico">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -14,8 +14,8 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
   <!-- Link CSS JS -->
-  <link rel="stylesheet" href="../css/generalStyles.css">
-  <link rel="stylesheet" href="../css/contacto.css">
+  <link rel="stylesheet" href="/css/generalStyles.css">
+  <link rel="stylesheet" href="/css/contacto.css">
   <title>Deltha Car´s</title>
 
   <!-- Google Fonts -->
@@ -31,83 +31,84 @@
 
   <%- include('./shared/nav.ejs') %>
 
-  <section class="header-contact">
-    <div class="title-container">
-      <h1 class="title-contact">
-        CONTACTO
-      </h1>
-    </div>
-  </section>
+    <section class="header-contact">
+      <div class="title-container">
+        <h1 class="title-contact">
+          CONTACTO
+        </h1>
+      </div>
+    </section>
 
-  <section>
-    <div class="form-container">
-      <div class="container ">
-        <div class="row d-flex aling-items-center justify-content-center">
-          <div class="left-column col-12 col-md-6">
-            <div class="center-left-column">
-              <div class="location">
-                <div class="header-title">
-                  <h4 class="subtitle-info">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="30" fill="currentColor"
-                      class="bi bi-geo-alt-fill mb-1" viewBox="0 0 16 16">
-                      <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
-                    </svg>
-                    <span>Localización</span>
-                  </h4>
-                  <span class="span-sub-info">Cra. 8 #9-25</span><br>
-                  <span class="span-sub-info">Guateque Boyacá</span>
+    <section>
+      <div class="form-container">
+        <div class="container ">
+          <div class="row d-flex aling-items-center justify-content-center">
+            <div class="left-column col-12 col-md-6">
+              <div class="center-left-column">
+                <div class="location">
+                  <div class="header-title">
+                    <h4 class="subtitle-info">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="30" fill="currentColor"
+                        class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                        <path
+                          d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+                      </svg>
+                      <span>Localización</span>
+                    </h4>
+                    <span class="span-sub-info">Cra. 8 #9-25</span><br>
+                    <span class="span-sub-info">Guateque Boyacá</span>
+                  </div>
                 </div>
-              </div>
-              <div class="number mt-5">
-                <div class="header-title">
-                  <h4 class="subtitle-info">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="30" fill="currentColor"
-                      class="bi bi-telephone-fill mb-1" viewBox="0 0 16 16">
-                      <path fill-rule="evenodd"
-                        d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
-                    </svg>
-                    <span>Teléfono</span>
-                  </h4>
-                  <span class="span-sub-info">313 244 5615</span><br>
+                <div class="number mt-5">
+                  <div class="header-title">
+                    <h4 class="subtitle-info">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="30" fill="currentColor"
+                        class="bi bi-telephone-fill mb-1" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                          d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+                      </svg>
+                      <span>Teléfono</span>
+                    </h4>
+                    <span class="span-sub-info">313 244 5615</span><br>
+                  </div>
                 </div>
-              </div>
-              <div class="email mt-5">
-                <div class="header-title">
-                  <h4 class="subtitle-info">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="30" fill="currentColor"
-                      class="bi bi-envelope-fill mb-2" viewBox="0 0 16 16">
-                      <path
-                        d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z" />
-                    </svg>
-                    <span>Email</span>
-                  </h4>
-                  <span class="span-sub-info">autopartesdelthacars@gmail.com</span><br>
+                <div class="email mt-5">
+                  <div class="header-title">
+                    <h4 class="subtitle-info">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="30" fill="currentColor"
+                        class="bi bi-envelope-fill mb-2" viewBox="0 0 16 16">
+                        <path
+                          d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z" />
+                      </svg>
+                      <span>Email</span>
+                    </h4>
+                    <span class="span-sub-info">autopartesdelthacars@gmail.com</span><br>
+                  </div>
                 </div>
-              </div>
-              <div class="time mt-5">
-                <div class="header-title">
-                  <h4 class="subtitle-info">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="30" fill="currentColor"
-                      class="bi bi-alarm-fill mb-2" viewBox="0 0 16 16">
-                      <path
-                        d="M6 .5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1H9v1.07a7.001 7.001 0 0 1 3.274 12.474l.601.602a.5.5 0 0 1-.707.708l-.746-.746A6.97 6.97 0 0 1 8 16a6.97 6.97 0 0 1-3.422-.892l-.746.746a.5.5 0 0 1-.707-.708l.602-.602A7.001 7.001 0 0 1 7 2.07V1h-.5A.5.5 0 0 1 6 .5zm2.5 5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5zM.86 5.387A2.5 2.5 0 1 1 4.387 1.86 8.035 8.035 0 0 0 .86 5.387zM11.613 1.86a2.5 2.5 0 1 1 3.527 3.527 8.035 8.035 0 0 0-3.527-3.527z" />
-                    </svg>
-                    <span>HORARIO</span>
-                  </h4>
-                  <span class="span-sub-info">Lunes a viernes: 08:00 am - 06:00 pm</span><br>
-                  <span class="span-sub-info">Sábado: 09.00 am - 02:00 pm</span>
+                <div class="time mt-5">
+                  <div class="header-title">
+                    <h4 class="subtitle-info">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="30" fill="currentColor"
+                        class="bi bi-alarm-fill mb-2" viewBox="0 0 16 16">
+                        <path
+                          d="M6 .5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1H9v1.07a7.001 7.001 0 0 1 3.274 12.474l.601.602a.5.5 0 0 1-.707.708l-.746-.746A6.97 6.97 0 0 1 8 16a6.97 6.97 0 0 1-3.422-.892l-.746.746a.5.5 0 0 1-.707-.708l.602-.602A7.001 7.001 0 0 1 7 2.07V1h-.5A.5.5 0 0 1 6 .5zm2.5 5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9V5.5zM.86 5.387A2.5 2.5 0 1 1 4.387 1.86 8.035 8.035 0 0 0 .86 5.387zM11.613 1.86a2.5 2.5 0 1 1 3.527 3.527 8.035 8.035 0 0 0-3.527-3.527z" />
+                      </svg>
+                      <span>HORARIO</span>
+                    </h4>
+                    <span class="span-sub-info">Lunes a viernes: 08:00 am - 06:00 pm</span><br>
+                    <span class="span-sub-info">Sábado: 09.00 am - 02:00 pm</span>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="right-column col-12 col-md-6 mb-3">
-            <div class="header-form">
-              <div class="center-content">
-                <div class="form-content text-center">
-                  <form action="">
-                    <span class="subtitle-info-large">
-                      Envíanos un email
-                    </span>
+            <div class="right-column col-12 col-md-6 mb-3">
+              <div class="header-form">
+                <div class="center-content">
+                  <div class="form-content text-center">
+                    <form action="">
+                      <span class="subtitle-info-large">
+                        Envíanos un email
+                      </span>
                   </div>
                   <div class="form-floating mb-3">
                     <input type="email" class="form-control input-transpa" id="floatingInput1"
@@ -125,8 +126,8 @@
                     <label for="floatingInput3">Telefono</label>
                   </div>
                   <div class="form-floating">
-                    <textarea class="form-control input-transpa" placeholder="Leave a comment here" id="floatingTextarea2"
-                      style="height: 100px"></textarea>
+                    <textarea class="form-control input-transpa" placeholder="Leave a comment here"
+                      id="floatingTextarea2" style="height: 100px"></textarea>
                     <label for="floatingTextarea2">Mensaje</label>
                   </div>
                   <div class="form-check form-switch mt-3">
@@ -140,94 +141,106 @@
                   <div class="mt-5">
                     <p class="policy-txt">
                       De acuerdo con los derechos que le confiere el la normativa vigente en protección de datos podrá
-                      ejercer los derechos de acceso, rectificación, limitación de tratamiento, supresión, portabilidad y
-                      oposición al tratamiento de sus datos de carácter personal así como del consentimiento prestado para
-                      el tratamiento de los mismos, dirigiendo su petición a la dirección postal indicada más arriba o al
+                      ejercer los derechos de acceso, rectificación, limitación de tratamiento, supresión, portabilidad
+                      y
+                      oposición al tratamiento de sus datos de carácter personal así como del consentimiento prestado
+                      para
+                      el tratamiento de los mismos, dirigiendo su petición a la dirección postal indicada más arriba o
+                      al
                       correo electrónico info@deltacars.es. Podrá dirigirse a la Autoridad de Control competente para
                       presentar la reclamación que considere oportuna.
                     </p>
                   </div>
                   </form>
-                  
+
+                </div>
               </div>
             </div>
           </div>
+
         </div>
-
       </div>
-    </div>
-    </div>
-  </section>
+      </div>
+    </section>
 
-  <!-- Footer -->
-  <footer id="main-footer">
-    <div class="container">
-      <div id="footer-widgets" class="clearfix">
-        <div class="footer-widget">
-          <div id="custom_html-2" class="widget_text fwidget et_pb_widget widget_custom_html">
-            <h4 class="text-primary">Contacto</h4>
-            <div class="textwidget custom-html-widget">
-              <div class="pie">
-                <h5 style="color:#d51a27;">Teléfono</h5>
-                <p>313 244 5615</p>
+    <section>
+      <div id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3974.5966270809126!2d-73.47693832424865!3d5.0064596949699665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4003b8c123f7ed%3A0x87dbadd035707416!2sCra.%208%20%239-25%2C%20Guateque%2C%20Boyac%C3%A1!5e0!3m2!1ses-419!2sco!4v1700410860966!5m2!1ses-419!2sco" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </section>
 
-                <h5 style="color:#d51a27;">Localización</h5>
-                <p> Cra. 8 #9-25,Guateque Boyacá</p>
-                <h5 style="color:#d51a27;">Email</h5>
-                <p>autopartesdelthacars@gmail.com</p>
+    <!-- Footer -->
+    <footer id="main-footer">
+      <div class="container">
+        <div id="footer-widgets" class="clearfix">
+          <div class="footer-widget">
+            <div id="custom_html-2" class="widget_text fwidget et_pb_widget widget_custom_html">
+              <h4 class="text-primary">Contacto</h4>
+              <div class="textwidget custom-html-widget">
+                <div class="pie">
+                  <h5 style="color:#d51a27;">Teléfono</h5>
+                  <p>313 244 5615</p>
 
-                <h5 style="color:#d51a27;">Horarios</h5>
-                <p>
-                  Lunes a viernes: 08:00 am - 06:00 pm <br>
-                  Sábado: 09.00 am - 02:00 pm
-                </p>
+                  <h5 style="color:#d51a27;">Localización</h5>
+                  <p> Cra. 8 #9-25,Guateque Boyacá</p>
+                  <h5 style="color:#d51a27;">Email</h5>
+                  <p>autopartesdelthacars@gmail.com</p>
+
+                  <h5 style="color:#d51a27;">Horarios</h5>
+                  <p>
+                    Lunes a viernes: 08:00 am - 06:00 pm <br>
+                    Sábado: 09.00 am - 02:00 pm
+                  </p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="footer-widget">
-          <div id="nav_menu-2" class="fwidget et_pb_widget widget_nav_menu">
-            <h4 class="text-primary ms-4">La Web</h4>
-            <div class="menu-principal-container">
-              <ul id="menu-principal" class="menu">
-                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-141"><a href="#">Inicio</a>
-                </li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-139"><a
-                    href="./stock.html">Deltacars Stock</a></li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-403"><a
-                    href="./about.html">Financiación</a></li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-138"><a
-                    href="./contact.html">Contacto</a></li>
-              </ul>
+          <div class="footer-widget">
+            <div id="nav_menu-2" class="fwidget et_pb_widget widget_nav_menu">
+              <h4 class="text-primary ms-4">La Web</h4>
+              <div class="menu-principal-container">
+                <ul id="menu-principal" class="menu">
+                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-141"><a
+                      href="#">Inicio</a>
+                  </li>
+                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-139"><a
+                      href="./stock.html">Deltacars Stock</a></li>
+                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-403"><a
+                      href="./about.html">Financiación</a></li>
+                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-138"><a
+                      href="./contact.html">Contacto</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="footer-widget">
+            <div id="media_image-2" class="fwidget et_pb_widget widget_media_image">
+              <img width="232" height="300"
+                src="https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-232x300.jpg"
+                class="image wp-image-36 attachment-medium size-medium" alt="" loading="lazy"
+                style="max-width: 100%; height: auto;"
+                srcset="https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-232x300.jpg 232w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-768x994.jpg 768w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-791x1024.jpg 791w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-400x516.jpg 400w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11.jpg 800w"
+                sizes="(max-width: 232px) 100vw, 232px">
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="footer-widget">
-          <div id="media_image-2" class="fwidget et_pb_widget widget_media_image">
-            <img width="232" height="300"
-              src="https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-232x300.jpg"
-              class="image wp-image-36 attachment-medium size-medium" alt="" loading="lazy"
-              style="max-width: 100%; height: auto;"
-              srcset="https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-232x300.jpg 232w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-768x994.jpg 768w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-791x1024.jpg 791w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-400x516.jpg 400w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11.jpg 800w"
-              sizes="(max-width: 232px) 100vw, 232px">
+      <div id="footer-bottom">
+        <div class="container clearfix">
+          <div id="footer-info">
+            <span>
+              <a href="https://deltacars.es/aviso-legal/">Aviso legal&nbsp;</a>|
+              <a href="https://deltacars.es/politica-de-privacidad/">Política de privacidad&nbsp;</a>|
+              <a href="https://deltacars.es/politica-de-cookies/">Política de cookies&nbsp;</a>
+            </span>
           </div>
         </div>
       </div>
-    </div>
+    </footer>
 
-    <div id="footer-bottom">
-      <div class="container clearfix">
-        <div id="footer-info">
-          <span>
-            <a href="https://deltacars.es/aviso-legal/">Aviso legal&nbsp;</a>|
-            <a href="https://deltacars.es/politica-de-privacidad/">Política de privacidad&nbsp;</a>|
-            <a href="https://deltacars.es/politica-de-cookies/">Política de cookies&nbsp;</a>
-          </span>
-        </div>
-      </div>
-    </div>
-  </footer>
+   
 
 </body>
