--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -165,7 +165,10 @@
 
     <section>
       <div id="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3974.5966270809126!2d-73.47693832424865!3d5.0064596949699665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4003b8c123f7ed%3A0x87dbadd035707416!2sCra.%208%20%239-25%2C%20Guateque%2C%20Boyac%C3%A1!5e0!3m2!1ses-419!2sco!4v1700410860966!5m2!1ses-419!2sco" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3974.5966270809126!2d-73.47693832424865!3d5.0064596949699665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4003b8c123f7ed%3A0x87dbadd035707416!2sCra.%208%20%239-25%2C%20Guateque%2C%20Boyac%C3%A1!5e0!3m2!1ses-419!2sco!4v1700410860966!5m2!1ses-419!2sco"
+          width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
 
@@ -241,6 +244,6 @@
       </div>
     </footer>
 
-   
+
 
 </body>
