--- a/views/renderCar.ejs
+++ b/views/renderCar.ejs
@@ -97,6 +97,31 @@
             </div>
         </section>
 
+        <section class="container-fluid">
+            <div class="oca-container d-flex align-items-center justify-content-center">
+                <div class="back-color">
+                    <div class="row">
+                        <div class="question-container col-12 col-md-7 mt-5 text-center">
+                            <div>
+                                <h3 class="oca-title ">Quieres vender tu coche o comprarte otro?</h3>
+                            </div>
+                            <div>
+                                <p class="">
+                                    Ponte en contacto con nosotros y te ayudaremos a vender tu coche o comparte uno de segunda mano. Si no lo tenemos, lo encontramos por ti.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="btn-holder col-12 col-md-4 mb-2 d-flex justify-content-center align-items-center">
+                            <button class="btn btn-danger btn-stock">
+                                <a class="link" href="/stock">VER STOCK
+                                </a>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    
+        </section>
 
 
 
