--- a/public/css/stock.css
+++ b/public/css/stock.css
@@ -43,3 +43,111 @@
   text-decoration: none;
   color: inherit;
 }
+
+/* Tabla */
+
+.header-contact {
+  text-align: center;
+  height: 500px;
+  margin-top: 86px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(
+      180deg,
+      rgba(174, 174, 174, 0.9) 0%,
+      #ffffff 100%
+    ),
+    url(https://www.repuestostoyotachile.cl/wp-content/uploads/2019/11/repuestos-para-autos.jpg) !important;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 100%;
+}
+
+.change-bg th{
+  background-color: #c21d1d;
+  color: white;
+}
+
+.auto-tilte{
+  font-family: "Teko", Helvetica, Arial, Lucida, sans-serif;
+  font-size: 6.5rem;
+}
+
+.title-holder{
+  height: 150px;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.form-select{
+  margin-top: 10px;
+  border-radius: 20px 20px 20px 20px;
+  width: fit-content;
+}
+
+.tabSelector{
+  font-family: "Teko", Helvetica, Arial, Lucida, sans-serif;
+  font-size: 1.9rem;
+
+}
+
+.cars-section{
+  padding-bottom: 70px;
+  background-image: linear-gradient(
+    180deg,
+    rgba(199, 184, 184, 0.497) 0%,
+    #ffffff69 100%
+  ),url(https://th.bing.com/th/id/R.8246b36d0358b4a6d7b186a3d8e94334?rik=nxHuvP8CjKTJdQ&riu=http%3a%2f%2fs1.picswalls.com%2fwallpapers%2f2016%2f06%2f10%2froad-4k-wallpaper_065241582_309.jpg&ehk=ji5918Q8qAex2yi9ARe05jkY6IAINNMT4N1R7XBj5Nk%3d&risl=&pid=ImgRaw&r=0);
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 700px;
+  max-height: fit-content;
+}
+
+.header-container {
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.753);
+  margin-top: 86px;
+  height: 250px;
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.84) 0%, rgb(255, 255, 255) 100%), url(https://deltacars.es/wp-content/uploads/2019/07/car-dealer-39.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.header-container h1 {
+  font-family: 'Teko', Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 8rem;
+  color: #000000!important;
+  letter-spacing: 0.05em;
+  line-height: 0.9em;
+  text-shadow: 0em 0.18em 0.27em rgba(0, 0, 0, 0.24);
+}
+
+.title-container {
+  text-align: center;
+}
+
+.trian {
+  position: absolute;
+  bottom: -90px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 0;
+  border-left: 50vw solid transparent;
+  border-right: 50vw solid transparent;
+  border-top: 90px solid #ffffff;
+}
+
+.top-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.margin-top{
+  margin-top: 100px;
+}
