--- a/views/index.ejs
+++ b/views/index.ejs
@@ -251,7 +251,7 @@
           </div>
           <div class="et_pb_button_module_wrapper et_pb_button_1_wrapper et_pb_button_alignment_center et_pb_module ">
             <a class="et_pb_button bg-danger car-button et_pb_button_1 et_pb_bg_layout_light" style="color: white;"
-              href="https://deltacars.es/project/range-rover-evoque/" data-icon="→">Ver ficha</a>
+              href="/renderCar/13" data-icon="→">Ver ficha</a>
           </div>
         </div>
         <div
@@ -275,7 +275,7 @@
           </div>
           <div class="et_pb_button_module_wrapper et_pb_button_2_wrapper et_pb_button_alignment_center et_pb_module ">
             <a class="et_pb_button bg-danger car-button et_pb_button_2 et_pb_bg_layout_light" style="color: white ;"
-              href="https://deltacars.es/project/honda-civic-1-6-elegance/" data-icon="→">Ver ficha</a>
+              href="/renderCar/14" data-icon="→">Ver ficha</a>
           </div>
         </div>
         <div
@@ -285,22 +285,22 @@
             ;>
             <div class="et_pb_blurb_content">
               <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img
-                    width="1024" height="577" src="https://deltacars.es/wp-content/uploads/2023/09/BM26.jpg" alt=""
-                    srcset="https://deltacars.es/wp-content/uploads/2023/09/BM26.jpg 1024w, https://deltacars.es/wp-content/uploads/2023/09/BM26-980x552.jpg 980w, https://deltacars.es/wp-content/uploads/2023/09/BM26-480x270.jpg 480w"
+                    width="1024" height="577" src="https://deltacars.es/wp-content/uploads/2022/06/M41.jpg" alt=""
+                    srcset="https://deltacars.es/wp-content/uploads/2022/06/M41.jpg 1024w, https://deltacars.es/wp-content/uploads/2022/06/M41.jpg 980w, https://deltacars.es/wp-content/uploads/2022/06/M41.jpg 480w"
                     sizes="(min-width: 0px) and (max-width: 480px) 480px, (min-width: 481px) and (max-width: 980px) 980px, (min-width: 981px) 1024px, 100vw"
                     class="et-waypoint et_pb_animation_off et_pb_animation_off_tablet et_pb_animation_off_phone wp-image-10038 et-animated"></span>
               </div>
               <div class="et_pb_blurb_container">
-                <h4 class="et_pb_module_header"><span>CITROEN Berlingo </span></h4>
+                <h4 class="et_pb_module_header"><span>MERCEDES AMG E53 4MATIC </span></h4>
                 <div class="et_pb_blurb_description">
-                  <p>14.990 €</p>
+                  <p>61.900€</p>
                 </div>
               </div>
             </div>
           </div>
           <div class="et_pb_button_module_wrapper et_pb_button_3_wrapper et_pb_button_alignment_center et_pb_module ">
             <a class="et_pb_button bg-danger car-button et_pb_button_3 et_pb_bg_layout_light" style="color: white ;"
-              href=" https://deltacars.es/project/citroen-berlingo-multispace/" data-icon="→">Ver ficha</a>
+              href="/renderCar/15" data-icon="→">Ver ficha</a>
           </div>
         </div>
       </div>
@@ -313,7 +313,7 @@
 
     <div class="et_pb_row et_pb_row_9 et_pb_css_mix_blend_mode et_had_animation text-center"></div>
 
-    <div class="et_pb_row text-center et_pb_row_fullwidth container d-flex justify-content-center align-items-center">
+    <div class="disable-scroll et_pb_row text-center et_pb_row_fullwidth container d-flex justify-content-center align-items-center">
       <div
         class="et_pb_column et_pb_column_4_4 et_pb_column_18 et_pb_css_mix_blend_mode_passthrough et-last-child text-center">
 
