--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" media="screen and (max-width:768px)" href="/css/mobile.css">
   <link rel="icon" href="/img/logoDeltha.ico">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -320,7 +319,7 @@
         <div class="et_pb_module et_pb_text et_pb_text_5 et_pb_text_align_center et_pb_bg_layout_light et_had_animation">
 
           <div class="et_pb_text_inner">
-            <h2>financiación</h2>
+            <h2>FINANCIACIÓN</h2>
           </div>
         </div>
       </div>
@@ -378,75 +377,8 @@
 
 
   <!-- Footer -->
-  <footer id="main-footer">
-    <div class="container">
-      <div id="footer-widgets" class="clearfix">
-        <div class="footer-widget">
-          <div id="custom_html-2" class="widget_text fwidget et_pb_widget widget_custom_html">
-            <h4 class="text-primary">Contacto</h4>
-            <div class="textwidget custom-html-widget">
-              <div class="pie">
-                <h5 style="color:#d51a27;">Teléfono</h5>
-                <p>313 244 5615</p>
+  <%- include('./shared/footer.ejs') %>
 
-                <h5 style="color:#d51a27;">Localización</h5>
-                <p> Cra. 8 #9-25,Guateque Boyacá</p>
-                <h5 style="color:#d51a27;">Email</h5>
-                <p>autopartesdelthacars@gmail.com</p>
-
-                <h5 style="color:#d51a27;">Horarios</h5>
-                <p>
-                  Lunes a viernes: 08:00 am - 06:00 pm <br>
-                  Sábado: 09.00 am - 02:00 pm
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="footer-widget">
-          <div id="nav_menu-2" class="fwidget et_pb_widget widget_nav_menu">
-            <h4 class="text-primary ms-4">La Web</h4>
-            <div class="menu-principal-container">
-              <ul id="menu-principal" class="menu">
-                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-141"><a href="#">Inicio</a>
-                </li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-139"><a
-                    href="./views/stock.html">Deltacars Stock</a></li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-403"><a
-                    href="./views/about.html">Financiación</a></li>
-                <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-138"><a
-                    href="/views/contact.html">Contacto</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <div class="footer-widget">
-          <div id="media_image-2" class="fwidget et_pb_widget widget_media_image">
-            <img width="232" height="300"
-              src="https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-232x300.jpg"
-              class="image wp-image-36 attachment-medium size-medium" alt="" loading="lazy"
-              style="max-width: 100%; height: auto;"
-              srcset="https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-232x300.jpg 232w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-768x994.jpg 768w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-791x1024.jpg 791w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11-400x516.jpg 400w, https://deltacars.es/wp-content/uploads/2019/07/car-dealer-11.jpg 800w"
-              sizes="(max-width: 232px) 100vw, 232px">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div id="footer-bottom">
-      <div class="container clearfix">
-        <div id="footer-info">
-          <span>
-            <a href="https://deltacars.es/aviso-legal/">Aviso legal&nbsp;</a>|
-            <a href="https://deltacars.es/politica-de-privacidad/">Política de privacidad&nbsp;</a>|
-            <a href="https://deltacars.es/politica-de-cookies/">Política de cookies&nbsp;</a>
-          </span>
-        </div>
-      </div>
-    </div>
-  </footer>
   <script>
     $(document).ready(function () {
       $(window).scroll(function () {
