--- a/views/shared/footer.ejs
+++ b/views/shared/footer.ejs
@@ -3,7 +3,7 @@
         <div class="container">
           <div id="footer-widgets" class="clearfix">
             <div class="footer-widget">
-              <div id="custom_html-2" class="widget_text fwidget et_pb_widget widget_custom_html">
+              <div id="custom_html-2" class="">
                 <h4 class="text-primary">Contacto</h4>
                 <div class="textwidget custom-html-widget">
                   <div class="pie">
@@ -25,24 +25,6 @@
               </div>
             </div>
   
-            <div class="footer-widget">
-              <div id="nav_menu-2" class="fwidget et_pb_widget widget_nav_menu">
-                <h4 class="text-primary ms-4">La Web</h4>
-                <div class="menu-principal-container">
-                  <ul id="menu-principal" class="menu">
-                    <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-141"><a
-                        href="#">Inicio</a>
-                    </li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-139"><a
-                        href="./stock.html">Deltacars Stock</a></li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-403"><a
-                        href="./about.html">Financiación</a></li>
-                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-138"><a
-                        href="./contact.html">Contacto</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
   
             <div class="footer-widget">
               <div id="media_image-2" class="fwidget et_pb_widget widget_media_image">
