--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -105,38 +105,42 @@
       <div class="title-holder">
         <h2 class="auto-tilte">NUEVO STOCK REPUESTOS</h2>
       </div>
-      <div class="container">
-        <label class="ms-2 tabSelector" for="tabSelector">Busca en nuestro nuevo stock!</label>
-        <select class="form-select" id="tabSelector">
-          <option value="#tab1P" selected>Abrazaderas</option>
-          <option value="#tab2P">Alternadores</option>
-          <option value="#tab3P">Arranques</option>
-          <option value="#tab4P">Bobinas</option>
-          <option value="#tab5P">Bombilleras Led</option>
-          <option value="#tab6P">Bujias</option>
-          <option value="#tab7P">Cintas Led</option>
-          <option value="#tab8P">Conectores</option>
-          <option value="#tab9P">Correa Accesorios</option>
-          <option value="#tab10P">Correa Repartición</option>
-          <option value="#tab11P">Elevadores Relay V12</option>
-          <option value="#tab12P">Embolo</option>
-          <option value="#tab13P">Filtros Gasolina</option>
-          <option value="#tab14P">Filtros Aire</option>
-          <option value="#tab15P">Inyectores</option>
-          <option value="#tab16P">Liquido Frenos</option>
-          <option value="#tab17P">Mangueras</option>
-          <option value="#tab18P">Patin Kit Repartición</option>
-          <option value="#tab19P">Pines</option>
-          <option value="#tab20P">Porta Escobillas</option>
-          <option value="#tab21P">Retenedores</option>
-          <option value="#tab22P">Sensores</option>
-          <option value="#tab23P">Tacometro</option>
-          <option value="#tab24P">Terminales</option>
-          <option value="#tab25P">Tornilleria Cilindrica</option>
-          <option value="#tab26P">Varios</option>
-          <option value="#tab27P">Vendix</option>
-          <option value="#tab28P">Wasa</option>
-        </select>
+      <div class="container center-this">
+        <div class="">
+          <label class="ms-2 tabSelector" for="tabSelector">Busca en nuestro nuevo stock!</label>
+          <div class="center-this">
+            <select class="form-select" id="tabSelector">
+              <option value="#tab1P" selected>Abrazaderas</option>
+              <option value="#tab2P">Alternadores</option>
+              <option value="#tab3P">Arranques</option>
+              <option value="#tab4P">Bobinas</option>
+              <option value="#tab5P">Bombilleras Led</option>
+              <option value="#tab6P">Bujias</option>
+              <option value="#tab7P">Cintas Led</option>
+              <option value="#tab8P">Conectores</option>
+              <option value="#tab9P">Correa Accesorios</option>
+              <option value="#tab10P">Correa Repartición</option>
+              <option value="#tab11P">Elevadores Relay V12</option>
+              <option value="#tab12P">Embolo</option>
+              <option value="#tab13P">Filtros Gasolina</option>
+              <option value="#tab14P">Filtros Aire</option>
+              <option value="#tab15P">Inyectores</option>
+              <option value="#tab16P">Liquido Frenos</option>
+              <option value="#tab17P">Mangueras</option>
+              <option value="#tab18P">Patin Kit Repartición</option>
+              <option value="#tab19P">Pines</option>
+              <option value="#tab20P">Porta Escobillas</option>
+              <option value="#tab21P">Retenedores</option>
+              <option value="#tab22P">Sensores</option>
+              <option value="#tab23P">Tacometro</option>
+              <option value="#tab24P">Terminales</option>
+              <option value="#tab25P">Tornilleria Cilindrica</option>
+              <option value="#tab26P">Varios</option>
+              <option value="#tab27P">Vendix</option>
+              <option value="#tab28P">Wasa</option>
+            </select>
+          </div>
+        </div>
       </div>
     </section>
 
