--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,8 +38,8 @@
         <h1 class="title text-white">Encuentra tu coche</h1>
         <div class="services-section">
           <div class="services container">
-            <h4 class="service-description fs-5"><strong><span style="color: #ff0000;">DISPONEMOS DE MAQUINA DE OZONO CON LA
-                  QUE LIMPIAMOS TODOS NUESTROS COCHES, PARA LA SEGURIDAD E HIGIENE DE NUESTROS CLIENTES.</span></strong>
+            <h4 class="service-description fs-5"><strong><span style="color: #ff0000;">Disponemos de maquina de ozono con la
+                  que limpiamos todos nuestros coches, para la seguridad e higiene de nuestros clientes.</span></strong>
             </h4>
           </div>
         </div>
