arregla simbolo de precio

--- a/views/stock.ejs
+++ b/views/stock.ejs
@@ -169,7 +169,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -201,7 +201,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -233,7 +233,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -265,7 +265,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -297,7 +297,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -329,7 +329,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -361,7 +361,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -393,7 +393,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -425,7 +425,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -457,7 +457,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -489,7 +489,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -521,7 +521,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -553,7 +553,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -585,7 +585,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -617,7 +617,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -649,7 +649,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -681,7 +681,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -713,7 +713,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -745,7 +745,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -777,7 +777,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -809,7 +809,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -841,7 +841,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -873,7 +873,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -905,7 +905,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -937,7 +937,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -969,7 +969,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -1001,7 +1001,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
@@ -1033,7 +1033,7 @@
                     <%= product.categoria %>
                   </td>
                   <td>
-                    <%= product.precioVenta %>$
+                    $<%= product.precioVenta %>
                   </td>
                 </tr>
                 <% }) %>
